--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,28 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
             </plugin>
+         <plugin>
+             <groupId>org.apache.maven.plugins</groupId>
+             <artifactId>maven-ant-run-plugin</artifactId>
+             <version>1.8</version>
+             <executions>
+                 <execution>
+                     <id>replace-proper-version</id>
+                     <phase>process-resources</phase>
+                     <goals>
+                         <goal>run</goal>
+                     </goals>
+                     <configuration>
+                         <target>
+                           <replace dir="${basedir}" value="SimpleVersionV1">
+                             <include name="**/pom.xml"/>
+                             <replacetoken>${version}</replacetoken>
+                           </replace>
+                         </target>
+                     </configuration>
+                 </execution>
+             </executions>
+         </plugin>                 
         </plugins>
     </build>
 
