--- a/pom.xml
+++ b/pom.xml
@@ -98,10 +98,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.1</version>
-            </plugin>
+            </plugin>                 
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
-             <artifactId>maven-ant-run-plugin</artifactId>
+             <artifactId>maven-antrun-plugin</artifactId>
              <version>1.8</version>
              <executions>
                  <execution>
@@ -123,5 +123,4 @@
          </plugin>                 
         </plugins>
     </build>
-
 </project>
